bpo-32711: Fix warnings for Python/ast_unparse.c (#5426)

* bpo-32711: Fix warnings for Python/ast_unparse.c